Move power operations of vm's to seperate threads